# monadic-arrow

./: CHANGELOG.md  README.md  monadic-arrow.cabal
src/Control/Arrow/: Monadic.hs
