cabal-version:       >=1.10

name:                monadic-arrow
version:             0.1.0.0
synopsis:
description:
license:             BSD3
author:              Manuel Bärenz
maintainer:          programming@manuelbaerenz.de
build-type:          Simple
extra-source-files:  CHANGELOG.md
extra-doc-files:     README.md

library
  exposed-modules:
    Control.Arrow.Monadic
  build-depends:
      base >= 4.9 && < 5
    , dunai >= 0.6
    , transformers >= 0.5
  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options: -Wall -Werror
